kubernetes/apps/tuppr/app/networkpolicy.yaml
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: tuppr
  namespace: talos-system
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/instance: talos-system-tuppr
      app.kubernetes.io/name: tuppr
  ingress:
    - fromEntities:
        - host
        - kube-apiserver
        - remote-node
    - fromEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: prometheus
            k8s:app.kubernetes.io/name: prometheus
      toPorts:
        - ports:
            - port: "8081"
              protocol: TCP
  egress:
    - toEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: kube-system
            k8s-app: kube-dns
      toPorts:
        - ports:
            - port: "53"
              protocol: UDP
            - port: "53"
              protocol: TCP
          rules:
            dns:
              - matchPattern: "*"
    - toFQDNs:
        - matchName: factory.talos.dev
      toPorts:
        - ports:
            - port: "443"
              protocol: TCP
    - toEntities:
        - host
        - kube-apiserver
        - remote-node
      toPorts:
        - ports:
            - port: "6443"
              protocol: TCP
            - port: "50000"
              protocol: TCP
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: tuppr-kubernetes-upgrade
  namespace: talos-system
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/instance: kubernetes
      app.kubernetes.io/name: kubernetes-upgrade
      app.kubernetes.io/part-of: tuppr
  egress:
    - toEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: kube-system
            k8s-app: kube-dns
      toPorts:
        - ports:
            - port: "53"
              protocol: UDP
            - port: "53"
              protocol: TCP
          rules:
            dns:
              - matchPattern: "*"
    - toEntities:
        - host
        - kube-apiserver
        - remote-node
      toPorts:
        - ports:
            - port: "6443"
              protocol: TCP
            - port: "50000"
              protocol: TCP
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: tuppr-talos-upgrade
  namespace: talos-system
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: talos-upgrade
      app.kubernetes.io/part-of: tuppr
  egress:
    - toEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: kube-system
            k8s-app: kube-dns
      toPorts:
        - ports:
            - port: "53"
              protocol: UDP
            - port: "53"
              protocol: TCP
          rules:
            dns:
              - matchPattern: "*"
    - toFQDNs:
        - matchName: factory.talos.dev
      toPorts:
        - ports:
            - port: "443"
              protocol: TCP
    - toEntities:
        - host
        - kube-apiserver
        - remote-node
      toPorts:
        - ports:
            - port: "6443"
              protocol: TCP
            - port: "50000"
              protocol: TCP
---
apiVersion: cilium.io/v2
kind: CiliumClusterwideNetworkPolicy
metadata:
  name: tuppr-host-firewall
spec:
  nodeSelector: {}
  ingress:
    - fromEndpoints:
        - matchLabels:
            app.kubernetes.io/instance: talos-system-tuppr
            app.kubernetes.io/name: tuppr
            k8s:io.kubernetes.pod.namespace: talos-system
        - matchLabels:
            app.kubernetes.io/instance: kubernetes
            app.kubernetes.io/name: kubernetes-upgrade
            app.kubernetes.io/part-of: tuppr
            k8s:io.kubernetes.pod.namespace: talos-system
        - matchLabels:
            app.kubernetes.io/name: talos-upgrade
            app.kubernetes.io/part-of: tuppr
            k8s:io.kubernetes.pod.namespace: talos-system
      toPorts:
        - ports:
            - port: "50000"
              protocol: TCP
